name:                distro-versions
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2019 Ben Gamari
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

executable distro-versions
  main-is:             Main.hs
  other-extensions:    OverloadedStrings, TypeApplications, DerivingStrategies
  other-modules:       Repology
  build-depends:       base >=4.12 && <4.13,
                       text >=1.2 && <1.3,
                       aeson,
                       containers,
                       http-client-tls,
                       servant,
                       servant-client
  -- hs-source-dirs:
  default-language:    Haskell2010
