name:                compare-ticks
version:             0.1.0.0
synopsis:            Compare ticky profiles
-- description:         
homepage:            http://github.com/bgamari/ghc-utils
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2016 Ben Gamari
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable compare-ticks
  main-is:             CompareTicks.hs
  other-modules:       TickyReport
  other-extensions:    OverloadedStrings, LambdaCase
  build-depends:       base >=4.8 && <4.13,
                       trifecta >=1.5 && <2.0,
                       optparse-applicative >=0.12 && <0.15,
                       text >=1.2 && <1.3,
                       containers >=0.5 && <0.7
  default-language:    Haskell2010
  ghc-options:         -Wall
